Отлажены тестовые сценарии. Скорректирована Grafana